Spacing fixed in RTL for single product page

--- a/style-rtl.css
+++ b/style-rtl.css
@@ -61,3 +61,9 @@ body, a, button {
 		top: 130px;
 	}
 }
+
+@media screen and (max-width: 1400px) and (min-width: 1025px) {
+	.product-right-side{
+	  margin-right: 30px;
+	}
+}
